fix bug: container not collapsing

--- a/src/styles.css
+++ b/src/styles.css
@@ -110,6 +110,11 @@ body {
     padding: 10px;
     margin-left: var(--sidebar-width);
     border: 1px solid #ebebeb;
+    margin-right: 0;
+}
+
+.container.collapse {
+    margin-right: 300px;
 }
 
 .add-button {
